--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 <body>
     
 </body>
-<script src="/app.js"></script>
+<!-- Seccion-1 | Reto-1 -->
+<!-- <script src="/Seccion-1/Reto-1/app.js"></script> -->
+<!-- Seccion-1 | Reto-2 -->
+
+
 </html>
