--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
 <!-- Seccion-1 | Reto-1 -->
 <!-- <script src="/Seccion-1/Reto-1/app.js"></script> -->
 <!-- Seccion-1 | Reto-2 -->
-
+<script src="/Seccion-1/Reto-2/app.js"></script>
 
 </html>
