Add Seccion-1 Rto-4

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <!-- Seccion-1 | Reto-1 -->
 <!-- <script src="/Seccion-1/Reto-1/app.js"></script> -->
 <!-- Seccion-1 | Reto-2 -->
-<script src="/Seccion-1/Reto-2/app.js"></script>
+<!-- <script src="/Seccion-1/Reto-2/app.js"></script> -->
+<!-- Seccion-1 | Reto-3 -->
+<!-- <script src="/Seccion-1/Reto-3/app.js"></script> -->
+<!-- Seccion-1 | Reto-4 -->
+<script src="/Seccion-1/Reto-4/app.js"></script>
 
 </html>
