--- a/index.html
+++ b/index.html
@@ -10,11 +10,17 @@
 </body>
 <!-- Seccion-1 | Reto-1 -->
 <!-- <script src="/Seccion-1/Reto-1/app.js"></script> -->
+
 <!-- Seccion-1 | Reto-2 -->
 <!-- <script src="/Seccion-1/Reto-2/app.js"></script> -->
+
 <!-- Seccion-1 | Reto-3 -->
 <!-- <script src="/Seccion-1/Reto-3/app.js"></script> -->
+
 <!-- Seccion-1 | Reto-4 -->
-<script src="/Seccion-1/Reto-4/app.js"></script>
+<!-- <script src="/Seccion-1/Reto-4/app.js"></script> -->
+
+<!-- Seccion-2 | Reto-1 -->
+<script src="/Seccion-2/Reto-1/app.js"></script>
 
 </html>
