Add Seccion-2 Reto-2

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
 <!-- <script src="/Seccion-1/Reto-4/app.js"></script> -->
 
 <!-- Seccion-2 | Reto-1 -->
-<script src="/Seccion-2/Reto-1/app.js"></script>
+<!-- <script src="/Seccion-2/Reto-1/app.js"></script> -->
 
+<!-- Seccion-2 | Reto-2 -->
+<script src="/Seccion-2/Reto-2/app.js"></script>
 </html>
