Add Seccion-2 Reto-3

--- a/index.html
+++ b/index.html
@@ -24,5 +24,8 @@
 <!-- <script src="/Seccion-2/Reto-1/app.js"></script> -->
 
 <!-- Seccion-2 | Reto-2 -->
-<script src="/Seccion-2/Reto-2/app.js"></script>
+<!-- <script src="/Seccion-2/Reto-2/app.js"></script> -->
+
+<!-- Seccion-2 | Reto-3 -->
+<script src="/Seccion-2/Reto-3/app.js"></script>
 </html>
